--- a/film.html
+++ b/film.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+ 
+
   <link rel="icon" type="image/x-icon" href="folder/برد پیت.jpeg" style="width: 10px;">
   <script src="https://kit.fontawesome.com/2634328df9.js" crossorigin="anonymous"></script>
   <meta charset="UTF-8">
   <title>film net </title>
-  <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="styles.css"> 
   <script  src="./script.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body >
+<body style="background-color: rgb(241, 230, 230);">
 
- 
+
+  
+
   <!-- -------------------------------------------------------------------------------this is hearder site-------------------------------------------------------------------------------- -->
-  <div class="scrollmenu">
+    <div class="scrollmenu3">
     <a href="#home">خانه</a>
     <a href="#news">اخرین خبر </a>
     <a href="#contact">مخاطبین</a>
@@ -29,10 +33,13 @@
     <a href="#friends">دوستان</a>
     <a href="#partners">دسترسی ها</a>
     <a href="#people">افراد</a>
-    <a href="#work">بیشتر </a>
+    <a href="work">بیشتر </a>
+  </div>  
+
+
+  <div class="bg-img21">
   </div>
   
-
 <!-- --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <div class="header">
     <img src="film pictures/مرز سه گانه.jpeg" alt="" title="مرز سه گانه ">
@@ -41,16 +48,34 @@
     <img src="folder/margo v.jpeg" alt="" style="margin-left: 5%; " title=" مارگو رابی">
    <img src="folder/tom hardy.jpeg" alt="" style="margin-left: 5%;" title="تام هاردی" >
     <img src="folder/tom crouse.jpeg" alt="" style="margin-left: 5%;" title="تام کروز"> 
-    
-    <!-- <div class="header-right"> 
+  <!-- <div>
       <a  href="https://www.google.com" target="_blank">دیگر فیلم ها </a>
       <a  href="https://www.playstation.com" target="_blank">رفتن به وبسایت یوتوب  </a>
       <a    href="https://www.shop.com" target="_blank">درباره ما</a>
-    </div> -->
+    </div>  -->
+  </div>
+
+  <div class="custom-select" style="width:200px;">
+    <select>
+      <option value="0">انتخاب نام فیلم :</option>
+      <option value="1">مرز سه گانه</option>
+      <option value="2">بلاد شات</option>
+      <option value="3">احضار</option>
+      <option value="4">شوالیه تاریکی</option>
+      <option value="5">ارباب حلقه ها </option>
+      <option value="6">کشتی جنگی</option>
+      <option value="7">میان ستاره ای</option>
+      <option value="8">ونوم2</option>
+      <option value="9">مگ دو</option>
+      <option value="10">اره 4 </option>
+      <option value="11">اوپنهایمر</option>
+      <option value="12">جنگ جهانی زد</option>
+    </select>
   </div>
   
+
  <!-- --------------------------------------------------------------------------------this is dark mode-------------------------------------------------------------------------------- -->
-  <button onclick="myFunction()" title="dark mode" class="dark"><i class="fa-solid fa-moon" ></i></button> 
+  <!-- <button onclick="myFunction()" title="dark mode" class="dark"><i class="fa-solid fa-moon" ></i></button>  -->
 
 
   <div style="padding-right:20px ; text-align: center; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
@@ -58,7 +83,7 @@
     <p >بیش از صد ها فیلم ایرانی و خارجی جدید و بروز شده همراه ترجمه فارسی </p>
     <p>film net </p>
   </div>  
-  
+ 
  <!-- ------------------------------------------------------------------------------------this is icon---------------------------------------------------------------------------- -->
 
 <!-- 
@@ -74,7 +99,7 @@
 
 <input type="search" name="" id="search" placeholder="نام فیلم " size="60px" style="margin-left: 40%;">
 
-<a href="https://www.google.com" target="_blank"><i class="fa-solid fa-magnifying-glass" style="color: rgba(25, 59, 255, 0.637); font-size: 2.5vh; ;"></i></a> 
+<a href="https://www.google.com" target="_blank"><i class="fa-solid fa-magnifying-glass" style="color: rgba(25, 59, 255, 0.637); font-size: 2.5vh;;"></i></a> 
 
 
  <!-- ------------------------------------------------------------------------------------this is login ---------------------------------------------------------------------------- -->
@@ -111,7 +136,10 @@
    </form>
  </div>  -->
 
-
+ <video autoplay muted loop id="myVideo" style="margin-top: 5%;">
+  <source src="film videos/کشتی جنگی.mp4" type="video/mp4">
+  
+</video>
   <!-- ------------------------------------------------------------------------------------six card---------------------------------------------------------------------------- -->
 
 <div class="amin2">
@@ -219,6 +247,12 @@
   </div>
 </div>
 </div>
+
+
+<video autoplay muted loop id="myVideo" style="margin-top: 5%;">
+  <source src="film videos/اره saw.mp4" type="video/mp4">
+  
+</video>
 
 <!-- ---------------------------------------------=============================================card 11==================================================================-------------------- -->
 
@@ -332,6 +366,14 @@
 </div>
 </div> 
 
+
+
+<video autoplay muted loop id="myVideo" style="margin-top: 5%;">
+  <source src="film videos/اوپن هایمر.mp4" type="video/mp4">
+  
+</video>
+
+
 <!-- ---------------------------------------------=============================================card 16==================================================================-------------------- -->
 
  <div class="amin4">
@@ -430,6 +472,12 @@
   </div>
 </div>
 </div> 
+
+<video autoplay muted loop id="myVideo" style="margin-top: 5%;">
+  <source src="film videos/جنگ جهانی زد.mp4" type="video/mp4">
+  
+</video>
+
 <!-- ---------------------------------------------=============================================card slide==================================================================-------------------- -->
 
   <!-- <div class="slideshow-container">
@@ -683,8 +731,32 @@
    hello my name is amin i am a web developer in sama uni 
    and i can help you bulid good web page with wordpresss and codding ......
 
-   <br>
 
+   <div class="container8">
+    <h1>
+      ارسال دیدگاه
+    </h1>
+    <form action="/action_page.php">
+      <label for="fname">نام و یا نام کاربری</label>
+      <input type="text8" id="fname" name="firstname" placeholder="نام خود را وارد کنید">
+  
+      <label for="lname">ایمیل </label>
+      <input type="email8" id="lname" name="lastname" placeholder="ایمیل خود را وارد کنید">
+  
+    
+      <label for="subject">دیدگاه خود را بنویسید</label>
+      <textarea id="subject" name="subject" placeholder="نوشتن نظر " style="height:200px"></textarea>
+  
+     <button class="btn8" >ارسال دیدگاه</button>
+    </form>
+  </div>
+
+
+
+
+   <br>
+   
+   
    <a href="#" class="fa fa-facebook"></a>
 <a href="#" class="fa fa-twitter"></a>
 <a href="#" class="fa fa-google"></a>
@@ -692,12 +764,110 @@
 <a href="#" class="fa fa-youtube"></a>
 <a href="#" class="fa fa-instagram"></a>
   </div>
+
+ 
 </div>
-تمام حقوق این وبسایت متعلق به محمد امین میباشد
+</div>
 </footer>  
+
+<footer style="background-color: black;">
+  تمام حقوق این وبسایت متعلق به محمد امین میباشد
+</footer>
 <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------- --> 
 
-
-
+<script>
+  var video = document.getElementById("myVideo");
+  var btn = document.getElementById("myBtn");
+  
+  function myFunction() {
+    if (video.paused) {
+      video.play();
+      btn.innerHTML = "Pause";
+    } else {
+      video.pause();
+      btn.innerHTML = "Play";
+    }
+  }
+  </script>
+<script>
+  var x, i, j, l, ll, selElmnt, a, b, c;
+  /*look for any elements with the class "custom-select":*/
+  x = document.getElementsByClassName("custom-select");
+  l = x.length;
+  for (i = 0; i < l; i++) {
+    selElmnt = x[i].getElementsByTagName("select")[0];
+    ll = selElmnt.length;
+    /*for each element, create a new DIV that will act as the selected item:*/
+    a = document.createElement("DIV");
+    a.setAttribute("class", "select-selected");
+    a.innerHTML = selElmnt.options[selElmnt.selectedIndex].innerHTML;
+    x[i].appendChild(a);
+    /*for each element, create a new DIV that will contain the option list:*/
+    b = document.createElement("DIV");
+    b.setAttribute("class", "select-items select-hide");
+    for (j = 1; j < ll; j++) {
+      /*for each option in the original select element,
+      create a new DIV that will act as an option item:*/
+      c = document.createElement("DIV");
+      c.innerHTML = selElmnt.options[j].innerHTML;
+      c.addEventListener("click", function(e) {
+          /*when an item is clicked, update the original select box,
+          and the selected item:*/
+          var y, i, k, s, h, sl, yl;
+          s = this.parentNode.parentNode.getElementsByTagName("select")[0];
+          sl = s.length;
+          h = this.parentNode.previousSibling;
+          for (i = 0; i < sl; i++) {
+            if (s.options[i].innerHTML == this.innerHTML) {
+              s.selectedIndex = i;
+              h.innerHTML = this.innerHTML;
+              y = this.parentNode.getElementsByClassName("same-as-selected");
+              yl = y.length;
+              for (k = 0; k < yl; k++) {
+                y[k].removeAttribute("class");
+              }
+              this.setAttribute("class", "same-as-selected");
+              break;
+            }
+          }
+          h.click();
+      });
+      b.appendChild(c);
+    }
+    x[i].appendChild(b);
+    a.addEventListener("click", function(e) {
+        /*when the select box is clicked, close any other select boxes,
+        and open/close the current select box:*/
+        e.stopPropagation();
+        closeAllSelect(this);
+        this.nextSibling.classList.toggle("select-hide");
+        this.classList.toggle("select-arrow-active");
+      });
+  }
+  function closeAllSelect(elmnt) {
+    /*a function that will close all select boxes in the document,
+    except the current select box:*/
+    var x, y, i, xl, yl, arrNo = [];
+    x = document.getElementsByClassName("select-items");
+    y = document.getElementsByClassName("select-selected");
+    xl = x.length;
+    yl = y.length;
+    for (i = 0; i < yl; i++) {
+      if (elmnt == y[i]) {
+        arrNo.push(i)
+      } else {
+        y[i].classList.remove("select-arrow-active");
+      }
+    }
+    for (i = 0; i < xl; i++) {
+      if (arrNo.indexOf(i)) {
+        x[i].classList.add("select-hide");
+      }
+    }
+  }
+  /*if the user clicks anywhere outside the select box,
+  then close all select boxes:*/
+  document.addEventListener("click", closeAllSelect);
+  </script>
 </body>
 </html> 
