--- a/music.html
+++ b/music.html
@@ -1434,7 +1434,7 @@ Sijal
 
 
 
-<button class="open-button" onclick="openForm()">Chat</button>
+<button class="open-button" onclick="openForm()"><i class="fa-brands fa-telegram" style="font-size: 8vh ; margin-left: 1vh; color: rgba(255, 0, 0, 0.761);" ></i></button>
 
 <div class="chat-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
