--- a/main.html
+++ b/main.html
@@ -30,13 +30,13 @@
     <a href="#work">بیشتر </a>
    
   </div> 
-<img src="folder2/ipone9.jpeg" alt="">
+ <img src="folder2/ipone9.jpeg" alt="">
 <img src="folder2/iphone x.jpeg" alt="">
 <img src="folder/ps5 controll.jpeg" alt="">  
 <img src="folder/xbox con.jpeg" alt="">
 <img src="folder2/one x.jpeg" alt="">  
 <img src="folder2/play4.jpeg" alt="">
-<img src="folder/xbox s 2.jpeg" alt="">
+<img src="folder/xbox s 2.jpeg" alt=""> 
 
   <i class="fa-brands fa-apple" style="font-size: 15vh; color: black;"></i>
 
@@ -302,10 +302,6 @@
   </div>
 </div>
 </div>
-<h1 style="text-align: center;">
-  برای دسترسی به کالا های بیشتر به سایت شیپور مراجعه کنید
-</h1>
-<embed src="https://www.sheypoor.com/" width="100%" height="1000px">
   <br>
 <!-- ---------------------------------------------=============================================card 11==================================================================-------------------- -->
 
@@ -399,7 +395,7 @@
 </div>
 </div> 
 <br>
-<embed src="https://www.torab.com" width="100%" height="1000px">
+
 <!-- ---------------------------------------------=============================================card 16==================================================================-------------------- -->
 
  <div class="amin4">
@@ -758,7 +754,7 @@
 
 
 
-<button class="open-button" onclick="openForm()">Contact us</button>
+<button class="open-button" onclick="openForm()"><i class="fa-brands fa-telegram" style="font-size: 8vh ; margin-left: 1vh; color: rgba(255, 0, 0, 0.761);" ></i></button>
 
 <div class="chat-popup" id="myForm">
   <form action="/action_page.php" class="form-container">
@@ -897,7 +893,7 @@ imageZoom("myimage", "myresult");
  <a href="#" class="fa fa-google"></a>
  <a href="#" class="fa fa-linkedin"></a>
  <a href="#" class="fa fa-youtube"></a>
- <a href="#" class="fa fa-instagram"></a>
+ <a href="#" style="background-color: rgb(208, 0, 132) ; " class="fa fa-instagram"></a>
    </div>
  </div>
  
